// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Score render corectly when passing activity flag 1`] = `
<div
  className="Score"
  style={
    Object {
      "backgroundColor": "rgb(235, 235, 2)",
    }
  }
>
  <img
    alt="icon"
    className="Icon"
  />
  Score: 0
</div>
`;

exports[`Score render corectly when passing activity flag 2`] = `
<div
  className="Score"
  style={
    Object {
      "backgroundColor": "rgb(131, 131, 1)",
    }
  }
>
  <img
    alt="icon"
    className="Icon"
  />
  Score: 0
</div>
`;

exports[`Score render correctly without props 1`] = `
<div
  className="Score"
  style={
    Object {
      "backgroundColor": "rgb(131, 131, 1)",
    }
  }
>
  <img
    alt="icon"
    className="Icon"
  />
  Score: 0
</div>
`;

exports[`Score render text correctly with given value 1`] = `
<div
  className="Score"
  style={
    Object {
      "backgroundColor": "rgb(131, 131, 1)",
    }
  }
>
  <img
    alt="icon"
    className="Icon"
  />
  Score: 5
</div>
`;
